--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1254,3 +1254,4 @@ a801a68  Adding basic customer model, migration, and exemplar.
 07f4289  creating empty spec directories
 7b21477  Initial commit.
 
+Foo
